// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`real engine promise/async promise/async usage 1`] = `
Object {
  "Clear Hash": Object {
    "type": "button",
  },
  "Contempt": Object {
    "default": 20,
    "max": 100,
    "min": -100,
    "type": "spin",
  },
  "Hash": Object {
    "default": 16,
    "max": 131072,
    "min": 1,
    "type": "spin",
  },
  "Minimum Thinking Time": Object {
    "default": 20,
    "max": 5000,
    "min": 0,
    "type": "spin",
  },
  "Move Overhead": Object {
    "default": 30,
    "max": 5000,
    "min": 0,
    "type": "spin",
  },
  "MultiPV": Object {
    "default": 1,
    "max": 500,
    "min": 1,
    "type": "spin",
  },
  "Ponder": Object {
    "default": false,
    "type": "check",
  },
  "Skill Level": Object {
    "default": 20,
    "max": 20,
    "min": 0,
    "type": "spin",
  },
  "Slow Mover": Object {
    "default": 89,
    "max": 1000,
    "min": 10,
    "type": "spin",
  },
  "Syzygy50MoveRule": Object {
    "default": true,
    "type": "check",
  },
  "SyzygyPath": Object {
    "default": "<empty>",
    "type": "string",
  },
  "SyzygyProbeDepth": Object {
    "default": 1,
    "max": 100,
    "min": 1,
    "type": "spin",
  },
  "SyzygyProbeLimit": Object {
    "default": 6,
    "max": 6,
    "min": 0,
    "type": "spin",
  },
  "Threads": Object {
    "default": 1,
    "max": 512,
    "min": 1,
    "type": "spin",
  },
  "UCI_Chess960": Object {
    "default": false,
    "type": "check",
  },
  "nodestime": Object {
    "default": 0,
    "max": 10000,
    "min": 0,
    "type": "spin",
  },
}
`;

exports[`real engine promise/async promise/async usage 2`] = `
Object {
  "Clear Hash": Object {
    "type": "button",
  },
  "Contempt": Object {
    "default": 20,
    "max": 100,
    "min": -100,
    "type": "spin",
  },
  "Hash": Object {
    "default": 16,
    "max": 131072,
    "min": 1,
    "type": "spin",
  },
  "Minimum Thinking Time": Object {
    "default": 20,
    "max": 5000,
    "min": 0,
    "type": "spin",
  },
  "Move Overhead": Object {
    "default": 30,
    "max": 5000,
    "min": 0,
    "type": "spin",
  },
  "MultiPV": Object {
    "default": 1,
    "max": 500,
    "min": 1,
    "type": "spin",
    "value": "4",
  },
  "Ponder": Object {
    "default": false,
    "type": "check",
  },
  "Skill Level": Object {
    "default": 20,
    "max": 20,
    "min": 0,
    "type": "spin",
  },
  "Slow Mover": Object {
    "default": 89,
    "max": 1000,
    "min": 10,
    "type": "spin",
  },
  "Syzygy50MoveRule": Object {
    "default": true,
    "type": "check",
  },
  "SyzygyPath": Object {
    "default": "<empty>",
    "type": "string",
  },
  "SyzygyProbeDepth": Object {
    "default": 1,
    "max": 100,
    "min": 1,
    "type": "spin",
  },
  "SyzygyProbeLimit": Object {
    "default": 6,
    "max": 6,
    "min": 0,
    "type": "spin",
  },
  "Threads": Object {
    "default": 1,
    "max": 512,
    "min": 1,
    "type": "spin",
  },
  "UCI_Chess960": Object {
    "default": false,
    "type": "check",
  },
  "nodestime": Object {
    "default": 0,
    "max": 10000,
    "min": 0,
    "type": "spin",
  },
}
`;
